--- a/scss/pages/_restaurant.scss
+++ b/scss/pages/_restaurant.scss
@@ -1,12 +1,14 @@
 .restaurant {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  align-items: center;
+  width: 100%;
   height: auto;
   .cover {
     margin-top: 64px;
     width: 100%;
     height: auto;
+    overflow: hidden;
     img {
       object-fit: cover;
       height: 100%;
@@ -19,6 +21,8 @@
     margin-top: -3rem;
     border-radius: 48px 48px 0 0;
     background-color: $bg-color_fourth;
+    width: 100%;
+    max-width: 100%;
     z-index: 10;
     &__head {
       display: flex;
@@ -31,25 +35,49 @@
         }
       }
     }
-    &__container {
-      padding: 0 1rem;
-      &__title {
-        position: relative;
-        h3 {
-          margin: 1rem 0;
-          text-align: left;
-          font-weight: 400;
-          text-transform: uppercase;
+    &__body {
+      &__container {
+        padding: 0 1rem;
+        margin: 2rem 0 3rem;
+        max-width: 100%;
+        overflow: auto;
+        &__title {
+          position: relative;
+          h3 {
+            margin: 1rem 0;
+            text-align: left;
+            font-weight: 400;
+            text-transform: uppercase;
+          }
+          &::after {
+            content: "";
+            position: absolute;
+            background-color: $bg-color-thirty;
+            height: 4px;
+            width: 3rem;
+            left: 0;
+            bottom: -0.5rem;
+          }
         }
-        &::after {
-          content: "";
-          position: absolute;
-          background-color: $bg-color-thirty;
-          height: 4px;
-          width: 3rem;
-          left: 0;
-          bottom: -0.5rem;
-        }
+      }
+    }
+    .btn__container {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      width: 100%;
+      height: 164px;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .restaurant {
+    .menu {
+      &__body {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
       }
     }
   }
