--- a/style.css
+++ b/style.css
@@ -60,71 +60,6 @@ li {
   list-style-type: none;
 }
 
-.first-p {
-  text-indent: 1.5em;
-}
-.first-p::first-letter {
-  font-size: 2rem;
-}
-
-.container-centered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.font-size-small {
-  font-size: small;
-}
-
-.font-size-smaller {
-  font-size: smaller;
-}
-
-.italic {
-  font-style: italic;
-}
-
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.m-10 {
-  margin: 10%;
-}
-
-.m-20 {
-  margin: 20%;
-}
-
-.m-30 {
-  margin: 30%;
-}
-
-.p-5 {
-  padding: 5%;
-}
-
-.p-10 {
-  padding: 10%;
-}
-
-.p-20 {
-  padding: 20%;
-}
-
-.p-30 {
-  padding: 30%;
-}
-
 @keyframes rotate-check {
   0% {
     transform: rotate(360deg);
@@ -446,13 +381,15 @@ header nav {
 .restaurant {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  align-items: center;
+  width: 100%;
   height: auto;
 }
 .restaurant .cover {
   margin-top: 64px;
   width: 100%;
   height: auto;
+  overflow: hidden;
 }
 .restaurant .cover img {
   object-fit: cover;
@@ -465,6 +402,8 @@ header nav {
   margin-top: -3rem;
   border-radius: 48px 48px 0 0;
   background-color: #f6f6f6;
+  width: 100%;
+  max-width: 100%;
   z-index: 10;
 }
 .restaurant .menu__head {
@@ -476,19 +415,22 @@ header nav {
   font-size: 1.8rem;
   font-family: "Shrikhand", cursive;
 }
-.restaurant .menu__container {
+.restaurant .menu__body__container {
   padding: 0 1rem;
+  margin: 2rem 0 3rem;
+  max-width: 100%;
+  overflow: auto;
 }
-.restaurant .menu__container__title {
+.restaurant .menu__body__container__title {
   position: relative;
 }
-.restaurant .menu__container__title h3 {
+.restaurant .menu__body__container__title h3 {
   margin: 1rem 0;
   text-align: left;
   font-weight: 400;
   text-transform: uppercase;
 }
-.restaurant .menu__container__title::after {
+.restaurant .menu__body__container__title::after {
   content: "";
   position: absolute;
   background-color: #99e2d0;
@@ -496,6 +438,21 @@ header nav {
   width: 3rem;
   left: 0;
   bottom: -0.5rem;
+}
+.restaurant .menu .btn__container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  height: 164px;
+}
+
+@media screen and (min-width: 1024px) {
+  .restaurant .menu__body {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
